--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -8,10 +8,12 @@ cryptography==41.0.1
 defusedxml==0.7.1
 Django==4.2.2
 django-colorfield==0.8.0
+django-filter==23.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
+drf-base64==2.0
 gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
