--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -6,6 +6,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==41.0.1
 defusedxml==0.7.1
+diff-match-patch==20230430
 Django==4.2.2
 django-colorfield==0.8.0
 django-filter==23.2
@@ -14,24 +15,32 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf-base64==2.0
+et-xmlfile==1.1.0
 gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
+MarkupPy==1.14
 MarkupSafe==2.1.3
 oauthlib==3.2.2
+odfpy==1.4.1
+openpyxl==3.1.2
 Pillow==9.5.0
 psycopg2-binary==2.9.6
 pycparser==2.21
 PyJWT==2.7.0
 python3-openid==3.2.0
 pytz==2023.3
+PyYAML==6.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
+tablib==3.5.0
 typing_extensions==4.6.3
 uritemplate==4.1.1
 urllib3==2.0.3
+xlrd==2.0.1
+xlwt==1.3.0
