--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 diff-match-patch==20230430
 Django==4.2.2
 django-colorfield==0.8.0
+django-cors-headers==4.0.0
 django-filter==23.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
