--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:1.19.3
@@ -38,9 +40,10 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
+    depends_on:
+      - frontend
   
 volumes:
   static_value:
   media_value:
   db_data:
-  frontend:
