--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,11 +1,19 @@
 server {
     listen 80;
+    server_name 127.0.0.1;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+    location /admin/ {
+        proxy_pass http://127.0.0.1/admin/:8000;
+    }
     location /api/ {
-        proxy_pass http://localhost:8000;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+        proxy_pass http://127.0.0.1/:8000;
     }
     location / {
         root /usr/share/nginx/html;
@@ -20,5 +28,4 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 }
