--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,6 +3,14 @@ server {
     server_name localhost;
     server_tokens off;
 
+    location /static/admin/ {
+        root  /var/html/;
+    }
+
+    location /media/ {
+        root  /var/html/;
+    }
+    
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -20,14 +28,7 @@ server {
         proxy_set_header        X-Forwarded-Proto $scheme;
     }
     
-    location /static/ {
-        root /var/html/;
-    }
 
-    location /media/ {
-        root /var/html/;
-    }
-    
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
