--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -13,6 +13,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
+drf-writable-nested==0.7.0
 gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
