--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -13,7 +13,6 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
-drf-writable-nested==0.7.0
 gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
@@ -27,6 +26,7 @@ PyJWT==2.7.0
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2023.3
+reportlab==4.0.4
 requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
