--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -9,6 +9,8 @@ defusedxml==0.7.1
 Django==4.2.2
 django-colorfield==0.9.0
 django-cors-headers==4.1.0
+django-extra-fields==3.0.2
+django-filter==23.2
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.7.2
