Добавлен workflow разработчика. Добавлен образ докера на докерхаб, docker-compose теперь использует образ с облака

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./.env
 
   django:
-    build: ../backend/foodgram
+    image: nvkovalev/foodgram:v1.0
     container_name: Django
     restart: always
     volumes:
