--- a/.github/workflows/deploy_workflow.yml
+++ b/.github/workflows/deploy_workflow.yml
@@ -59,6 +59,13 @@ jobs:
         context: backend/foodgram/
         push: true
         tags: nvkovalev/foodgram:v1.0
+    
+    - name: Push to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        context: frontend/
+        push: true
+        tags: nvkovalev/foodgram_frontend:v1.0
 
     - name: Send message if build_and_push_to_docker_hub failed
       if: ${{ failure() }}
@@ -84,7 +91,7 @@ jobs:
         script: |
             sudo systemctl stop nginx 
             sudo docker-compose stop
-            sudo docker-compose rm Django
+            sudo docker-compose rm django
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -92,6 +99,9 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+            echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
+            echo CSRF_TRUSTED_ORIGINS=${{ secrets.CSRF_TRUSTED_ORIGINS }} >> .env
             sudo docker-compose up -d
             sudo docker system prune --force
 
