--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,6 +20,12 @@ services:
       - postgresql
     env_file:
       - ./.env
+  
+  frontend:
+    image: nvkovalev/foodgram_frontend:v1.0
+    container_name: frontend
+    volumes:
+      - ../frontend/:/app/result_build/
 
   nginx:
     image: nginx:1.19.3
@@ -29,11 +35,11 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
 
     depends_on:
+      - frontend
       - django
 
 volumes:
